# aros-meta-loop-python

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
src/aros_meta_loop/: __init__.py  config.py  main.py
src/aros_meta_loop/db/: engine.py  migrations.py
src/aros_meta_loop/models/: signals.py
src/aros_meta_loop/routers/: api.py
src/aros_meta_loop/services/: engine.py  event_emitter.py  harness_trigger.py  metrics.py  scheduler.py  state_manager.py  task_planner.py
tests/: conftest.py  test_api.py  test_api_integration.py  test_autonomous_planning.py  test_db.py  test_e2e.py  test_engine.py  test_engine_plan.py  test_evolution_log.py  test_harness_trigger.py  test_integration.py  test_metrics.py  test_nirmana.py  test_nirmana_integration.py  test_pending_approvals.py  test_state_manager.py  test_task_planner.py
