[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aros-meta-loop"
version = "0.1.0"
description = "AROS Meta-Cognition Loop"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "apscheduler>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "httpx",
]
